testcases/semantic_error/expressions.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f1: i32;

    fn test(): f32 {
        return f1;
    }
}
